--- a/index.html
+++ b/index.html
@@ -13,17 +13,8 @@
             <img src="img/head.svg" alt="">
         </header>
         <main id="cards">
-            <div class="card">
-                <h2>24/11 <span>quinta</span></h2>
-                <ul>
-                    <li>
-                        <img src="img/brasil.svg" alt="">
-                        <strong>16:00</strong>
-                        <img src="img/camaroes.svg" alt="">
-                    </li>
-                </ul>
-            </div>
         </main>
     </div>
+    <script src="java/script.js"></script>
 </body>
 </html>
